--- a/package.json
+++ b/package.json
@@ -6,8 +6,10 @@
     "@testing-library/jest-dom": "^5.11.10",
     "@testing-library/react": "^11.2.6",
     "@testing-library/user-event": "^12.8.3",
+    "fbemitter": "^3.0.0",
     "react": "^17.0.2",
     "react-cookie": "^4.0.3",
+    "react-credit-cards": "^0.8.3",
     "react-dom": "^17.0.2",
     "react-push-notification": "^1.3.0",
     "react-router-dom": "^5.2.0",
