--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react-cookie": "^4.0.3",
     "react-credit-cards": "^0.8.3",
     "react-dom": "^17.0.2",
+    "react-public-ip": "^1.0.0",
     "react-push-notification": "^1.3.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
